# mx4hyprland

./: 99-logitech-mx_master_4.rules  INSTALL.md  README.md  config.json  config.toml  meson.build  meson.options  mx-haptics.service  mx-haptics.service.in  mx_master_4.py  pyproject.toml  start.sh  watch.py
include/: config.hpp  haptic_manager.hpp  hyprland_listener.hpp  ipc_server.hpp  logger.hpp  mx_master_4.hpp
src/: config.cpp  haptic_manager.cpp  hyprland_listener.cpp  ipc_server.cpp  main.cpp  mx_master_4.cpp
subprojects/: tomlplusplus.wrap
